# omnicoreagent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.mdx  ROADMAP.md  build.sh  deploy_docs.sh  docs.json  docs.sh  llms.txt  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml
cookbook/: CONTRIBUTING.mdx  README.md  README.mdx
cookbook/advanced_agent/: README.mdx  e_commerce_personal_shopper_agent.py  flightBooking_agent.py  real_time_customer_support_agent.py
cookbook/advanced_agent/ai_due_diligence_agent/: README.mdx  due_diligence_tools.py  due_diligence_workflow.py
cookbook/background_agents/: README.mdx  __init__.py  background_agent_example.py
cookbook/community_tools/: agent_with_search.py  creating_new_community_tools.md  mixed_custom_and_community.py  test_tavily_tool.py
cookbook/deep_agent/: README.md  basic_usage.py  code_architect.py  code_review_agent.py  market_research_analyst.py  research_analyst.py  upwork_proposal_writer.py
cookbook/deep_agent/deep_ai_due_diligence/: README.mdx  __init__.py  requirements.txt
cookbook/deep_agent/vula_due_diligence/: INSTALL.md  QUICKSTART.md  README.md  USAGE.md  __init__.py  main.py  requirements.txt  sample_companies.csv  setup.sh  test.py  test_input.py
cookbook/getting_started/: README.mdx  agent_configuration.py  agent_with_all_tools.py  agent_with_context_management.py  agent_with_event_switching.py  agent_with_events.py  agent_with_guardrails.py  agent_with_local_tools.py  agent_with_mcp_tools.py  agent_with_memory.py  agent_with_memory_switching.py  agent_with_metrics.py  agent_with_models.py  agent_with_omni_serve.py  agent_with_sub_agents.py  agent_with_tool_offload.py  deep_agent_with_omni_serve.py  first_agent.py  first_deep_agent.py
cookbook/omniserve/: README.md  README.mdx  cli_agent.py  python_api.py  resilience_patterns.py
cookbook/production/: README.mdx  guardrails.py  metrics_observability.py
cookbook/showcase/: README.mdx
cookbook/showcase/deep_code_agent/: Dockerfile.sandbox  api.py  build_sandbox.sh  cli.py  code_agent_runner.py  config.py  main.py  observability.py  observability_globals.py  pyproject.toml  system_prompt.py
cookbook/showcase/deep_code_agent/sandbox/: sandbox_executor.py  seccomp_profile.py  utils.py
cookbook/showcase/deep_code_agent/tools/: coding_tools.py
cookbook/showcase/devops_copilot_agent/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.mdx  bash.py  cli.py  config.py  config.yaml  devops_copilot_agent.py  docker-compose.yml  main.py  observability.py  pyproject.toml  system_prompt.py
cookbook/showcase/devops_copilot_agent/.omniagent_config/: servers_config_OmniDevOpsCopilot.json
cookbook/showcase/devops_copilot_agent/monitoring/: grafana-datasources.yml  prometheus.yml
cookbook/showcase/devops_copilot_agent/monitoring/grafana-provisioning/dashboards/: copilot-dashboard.json  dashboards.yml
cookbook/showcase/devops_copilot_agent/tests/: tests_bash.py
cookbook/showcase/omniavelis/: .env.examples  .gitignore  README.mdx  pyproject.toml  test_audit_pipeline.py
cookbook/workflows/: README.mdx  parallel_agent.py  router_agent.py  sequential_workflow.py  test.py
docker/: .env.example  Dockerfile  docker-compose.yml  prometheus.yml
docs/: README.mdx  changelog.mdx  deep-agent.md  index.mdx
docs/core-concepts/: architecture.mdx  background-agents.mdx  community-tools.mdx  context-engineering.mdx  deep-agent.mdx  events.mdx  guardrails.mdx  local-tools.mdx  mcp.mdx  memory.mdx  overview.mdx  skills.mdx  sub-agents.mdx  workflows.mdx  workspace-memory.mdx
docs/getting-started/: installation.mdx  quickstart.mdx
docs/how-to-guides/: advanced-tools.mdx  basic-usage.mdx  commands.mdx  configuration.mdx  memory-management.mdx  models.mdx  observability.mdx  omniserve.mdx
scripts/: verify_codebase.py
src/omnicoreagent/: __init__.py  exceptions.py
src/omnicoreagent/community/: __init__.py  agentql.py  airflow.py  api.py  apify.py  arxiv.py  aws_lambda.py  aws_ses.py  baidusearch.py  bitbucket.py  brandfetch.py  bravesearch.py  brightdata.py  browserbase.py  calcom.py  calculator.py  cartesia.py  clickup.py  code_execution.py  confluence.py  crawl4ai.py  csv_toolkit.py  dalle.py  daytona.py  decorator.py  desi_vocal.py  discord.py  docker.py  duckdb.py  duckduckgo.py  e2b.py  eleven_labs.py  email.py  evm.py  exa_answer.py  exa_find_similar.py  exa_get_contents.py  exa_research.py  exa_search.py  fal.py  (+88 more)
src/omnicoreagent/core/: __init__.py  constants.py  context_manager.py  guardrails.py  llm.py  system_prompts.py  token_usage.py  tool_response_offloader.py  types.py  utils.py  workspace.py
src/omnicoreagent/mcp_clients_connection/: __init__.py  client.py  notifications.py  prompts.py  refresh_server_capabilities.py  resources.py  sampling.py  tools.py
tests/: test_background_agent.py  test_base.py  test_client.py  test_community_tools.py  test_context_manager.py  test_deep_agent.py  test_llm.py  test_memory.py  test_memory_tool_backend.py  test_omniserve_full.py  test_prompts.py  test_react_agent.py  test_refresh_server_capabilities.py  test_resources.py  test_sampling.py  test_skills.py  test_summarizer.py  test_tool_output_guardrail.py  test_tool_response_offloader.py  test_tools.py  verify_community_tools.py
(+142 files in other folders)
