[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "deep-code-agent"
dynamic = ["version"]
description = "Production-grade deep coding agent with secure Docker sandbox, .env config, and LLM-powered tool execution"
readme = "README.md"
authors = [{ name = "Abiola Adeshina", email = "abiolaadedayo1993@gmail.com" }]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["ai", "agent", "coding", "sandbox", "docker", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.2.1",
    "prometheus-client>=0.23.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "docker>=7.1.0",
    "aiohttp>=3.9.0",
    "rich>=14.2.0",
    "omnicoreagent>=0.2.10",
]

[project.scripts]
deep-code-agent = "deep_coder.cli:main"  # adjust if you add a CLI later

[project.urls]
Repository = "https://github.com/Abiorh001/deep-code-agent"
# Issues = "https://github.com/Abiorh001/deep-code-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["deep_coder"]

[tool.hatch.build]
packages = ["deep_coder"]
include = [
    "LICENSE",
    "README.md",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "hatch>=1.14.1",
]
